# Codex-Forge

./: .gitignore  CHANGELOG.md  PUSH_TEST.md  README.en.md  README.md  basedpyright-output.json  clear_pyd.py  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json  pyproject.toml  pyrightconfig.json  setup_pyd.py  tailwind.config.js  tsconfig.json  zsh.exe.stackdump  界面重构方案.md
.github/workflows/: release.yml
.workflow/: GiteeReleaseMirror.yml  gitee-build-release.yml  gitee-release.yml
docs/: 使用说明.md  参考项目分析.md  开发打包说明.md  账号切换重构方案.md
docs/propmt/: gpt5.5-unrestricted.md
python/: clear_pyd.py  pyproject.toml  setup_pyd.py
python/bridge/: __init__.py  cli.py  commands.py
python/core/: __init__.py  app_server_service.py  auth_service.py  codex_source.py  config_store.py  constants.py  db.py  instruction_service.py  logger.py  oauth_service.py  path_utils.py  profile_service.py  secure_store.py  sync_service.py  test_config_store.py  test_usage_service.py  toml_config_service.py  usage_service.py  workspace_service.py
python/tests/: test_chatgpt_compat.py  test_instruction_service.py  test_profile_storage.py  test_workspace_features.py
scripts/: build.js  build.ps1  build.sh  build_backend.sh  build_installer.sh  build_pyd.ps1  build_shell.sh  clean.js  clean.ps1  clean.sh  generate_app_icon.ps1  gitee_go_windows_release.sh  publish_gitee_release.js  publish_github_release.js  run.ps1  write_release_notes.js
src/codex_multi_launcher/: __init__.py  app.py  main.py
src/main/: codexSkin.ts  codexSkinStore.ts  index.ts  ipc.ts
src/main/python/: launcherBackend.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  i18n.tsx  main.tsx  styles.css  types.ts
src/renderer/src/api/: launcher.ts
src/renderer/src/components/: AppLayout.tsx  CodexSkinSettings.tsx  Metric.tsx
src/renderer/src/constants/: views.ts
src/renderer/src/pages/: CodexSkinPage.tsx  Dashboard.tsx  Diagnostics.tsx  HomePage.tsx  InstructionsPage.tsx  Profiles.tsx  SettingsPage.tsx  TomlConfigPage.tsx  WorkspacePage.tsx
