[project]
name = "codex-multi-launcher"
version = "0.1.0"
description = "Windows launcher for running isolated Codex desktop profiles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codex-multi-launcher = "codex_multi_launcher.app:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.14.0",
]

[tool.uv]
package = true

[tool.pyinstaller]
entry = "src/codex_multi_launcher/app.py"

