[project]
name = "codex-multi-launcher"
version = "0.1.0"
description = "Windows launcher for running isolated Codex desktop profiles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "cython>=3.2.6",
    "pyinstaller>=6.14.0",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "python"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["python"]

[tool.pyinstaller]
entry = "python/main.py"

[tool.basedpyright]
include = ["python"]
exclude = [
    "python/.venv",
    "python/__pycache__",
    "python/**/*.egg-info",
]
typeCheckingMode = "basic"
extraPaths = ["python"]
reportMissingTypeStubs = false
