[project]
name = "codex-forge"
version = "0.1.0"
description = "Windows desktop workspace for Codex profiles, config, and instructions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "cython>=3.2.6",
    "pyinstaller>=6.14.0",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "python"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["python"]

[tool.pyinstaller]
entry = "python/main.py"

[tool.basedpyright]
include = ["python"]
exclude = [
    "python/.venv",
    "python/__pycache__",
    "python/**/*.egg-info",
]
typeCheckingMode = "basic"
extraPaths = ["python"]
reportMissingTypeStubs = false
