[project]
name = "chatgpt-forge"
version = "0.1.0"
description = "Windows profile and multi-instance manager for the ChatGPT desktop app."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pyinstaller>=6.14.0",
]

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pyinstaller]
entry = "main.py"
